# Learn-C-the-hard-way---Exercises

./: README.md
QR_Decomposition/: Makefile  QR_decomposition  QR_decomposition.c
automated_testing/: Makefile
c-skeleton/: Makefile
ex_01_02/: ex1
ex_03/: ex3  ex3.c
ex_04/: ex4
ex_07/: ex7
ex_08/: ex8  ex8.c
ex_10/: Makefile  ex10
ex_11/: Makefile  ex11
ex_12/: Makefile  ex12  ex12.c
ex_13/: Makefile  ex13
ex_14/: Makefile  ex14  ex14.c
ex_15/: Makefile  ex15  ex15.c
ex_16/: Makefile  ex16  ex16.c
ex_17/: Makefile  ex17  ex17.c
ex_18/: Makefile  ex18
ex_19/: Makefile  ex19
ex_22/: Makefile  ex22.h  ex22_main
ex_23/: Makefile  ex23
ex_24/: Makefile  ex24
ex_25/: Makefile  ex25
ex_28_testlib/: Makefile
exercises/: .gitignore  Makefile  ex1.c  ex10.c  ex11.c  ex13.c  ex16_old  ex18.c  ex19.c  ex22.c  ex22_main.c  ex23.c  ex24.c  ex25.c  ex4.c  ex7.c
hashtab/: HTab  HTab.c  HTab.h  Makefile
liblcthw/: .gitignore  Makefile
liblcthw2/: CMakeLists.txt
liblcthw2/src/lcthw/: CMakeLists.txt
liblcthw2/src/lcthw/include/lcthw/: list.h  txtio.h
liblcthw2/src/lcthw/src/: txtio.c
liblcthw2/src/lcthw/test/: darray_algos_tests.c  txtio_tests.c  unit_tests.c
liblcthw2/src/lcthw/test/data/: filio_test.txt
liblcthw2/src/pread/: CMakeLists.txt
liblcthw2/src/pread/src/: pread_main.c
param_reader/: Makefile  parafile.para  read_param  read_param.c
randomStuff/: Makefile  matrix_inverse  matrix_inverse.c  pointerTest  pointerTest.c  voidFun  voidFun.c
static_lib_test/: Makefile
winefind/: Makefile  README.md  logfind  (+2 more)
(+43 files in other folders)
